service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: console-api
  labels:
    app: console-api
spec:
  selector:
    app: console-api
  ports:
    - name: main
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: docs
      protocol: TCP
      port: 8081
      targetPort: 8081
